Correction de problèmes mineur

--- a/maquette_2/index.html
+++ b/maquette_2/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="css/bootstrap-icons-1.8.3/bootstrap-icons.css"
+      href="/ressources/css/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="/ressources/css/bootstrap.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Document</title>
   </head>
