--- a/maquette_3/index.html
+++ b/maquette_3/index.html
@@ -1,65 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Nunito"
-    />
-    <link rel="stylesheet" href="../../../../css/bootstrap.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header class="p-4">
-      <div class="container">
-        <div class="row">
-          <div class="d-flex justify-content-between">
-            <div class="col">
-              <h1 class="fs-5 fw-bold">Start Bootstrap</h1>
-            </div>
-            <div class="col">
-              <div class="d-flex justify-content-end">
-                <a class="px-4 text-decoration-none text-dark" href="">
-                  About
-                </a>
-                <a class="px-4 text-decoration-none text-dark" href="">
-                  Projects
-                </a>
-                <a class="px-4 text-decoration-none text-dark" href="">
-                  Contact
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-    <main>
-      <section class="bg-masthead">
-        <div class="container">
-          <div class="row p-5">
-            <div class="col d-flex justify-content-center">
-              <h2 class="display-1 ls-1 text-uppercase">Grayscale</h2>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col d-flex justify-content-center">
-              <p>
-                A free, responsive, one page Bootstrap theme created by Start
-                Bootstrap.
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col d-flex justify-content-center">
-              <button>Get Started</button>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+		<link rel="stylesheet" href="/ressources/css/bootstrap.css" />
+		<link rel="stylesheet" href="/ressources/css/bootstrap-icons.css" />
+		<link rel="stylesheet" href="css/styles.css" />
+		<title>Document</title>
+	</head>
+	<body>
+		<head>
+			<nav class="navbar navbar-expand-lg fixed-top bg-light shadow">
+				<div class="container py-2 fw-bold fs-6">
+					<a class="navbar-brand hinge" href="">Start Bootstrap</a>
+
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#navbarSupportedContent"
+						aria-controls="navbarSupportedContent"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+
+					<div class="collapse navbar-collapse justify-content-lg-end" id="navbarSupportedContent">
+						<ul class="navbar-nav">
+							<li class="nav-item"><a class="nav-link me-2" href="#about">About</a></li>
+							<li class="nav-item"><a class="nav-link me-2" href="#services">Services</a></li>
+							<li class="nav-item"><a class="nav-link me-2" href="#portfolio">Portfolio</a></li>
+							<li class="nav-item"><a class="nav-link me-2" href="#contact">Contact</a></li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+		</head>
+
+		<main>
+			<section class="masthead">
+				<div class="container h-100 d-flex align-items-center">
+					<div class="row justify-content-center text-center text-light">
+						<div class="col-8">
+							<h1 class="display-4 fw-semibold">Your Favorite Place for Free Bootstrap Themes</h1>
+						</div>
+
+						<div class="col-8">
+							<hr class="divider opacity-100 text-custom-primary mx-auto" />
+						</div>
+
+						<div class="col-8">
+							<p class="font-2 fs-5 text-white text-opacity-75">
+								Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!
+							</p>
+						</div>
+
+						<div class="col-8">
+							<button class="btn btn-custom-primary rounded-pill py-3 px-4 mt-4 fw-bold text-uppercase text-light">Find out more</button>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="about" class="bg-custom-primary py-section">
+				<div class="container d-flex align-items-center">
+					<div class="row justify-content-center text-center text-light">
+						<div class="col-8">
+							<h2 class="fw-semibold">We've got what you need!</h2>
+						</div>
+						<div class="col-8">
+							<hr class="divider opacity-100 text-light mx-auto" />
+						</div>
+						<div class="col-8">
+							<p class="font-2 fs-6 text-white text-opacity-75">
+								Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!
+							</p>
+						</div>
+						<div class="col-8">
+							<button class="btn btn-light rounded-pill py-3 px-4 mt-4 fw-bold text-uppercase text-dark">Get Started!</button>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="services" class="py-section">
+				<div class="container">
+					<div class="row">
+						<div class="row justify-content-center text-center text-dark">
+							<div class="col-8">
+								<h2>At Your Service</h2>
+							</div>
+							<div class="col-8">
+								<hr class="divider opacity-100 text-custom-primary mx-auto" />
+							</div>
+						</div>
+						<div class="row mt-5 text-center justify-content-center g-4">
+							<div class="col-12 col-md-6 col-lg-3">
+								<i class="bi bi-gem fs-1 text-custom-primary"></i>
+								<h3>Sturdy Themes</h3>
+								<p class="font-2 text-black-50">Our themes are updated regularly to keep them bug free!</p>
+							</div>
+							<div class="col-12 col-md-6 col-lg-3">
+								<i class="bi-laptop fs-1 text-custom-primary"></i>
+								<h3>Up to Date</h3>
+								<p class="font-2 text-black-50">All dependencies are kept current to keep things fresh.</p>
+							</div>
+							<div class="col-12 col-md-6 col-lg-3">
+								<i class="bi-globe fs-1 text-custom-primary"></i>
+								<h3>Ready to Publish</h3>
+								<p class="font-2 text-black-50">You can use this design as is, or you can make changes!</p>
+							</div>
+							<div class="col-12 col-md-6 col-lg-3">
+								<i class="bi-heart fs-1 text-custom-primary"></i>
+								<h3>Made with Love</h3>
+								<p class="font-2 text-black-50">Is it really open source if it's not made with love?</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="portfolio">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-4 px-0"><img class="img-fluid" src="img/portfolio/1.jpg" /></div>
+						<div class="col-4 px-0"><img class="img-fluid" src="img/portfolio/2.jpg" /></div>
+						<div class="col-4 px-0"><img class="img-fluid" src="img/portfolio/3.jpg" /></div>
+					</div>
+					<div class="row">
+						<div class="col-4 px-0"><img class="img-fluid" src="img/portfolio/4.jpg" /></div>
+						<div class="col-4 px-0"><img class="img-fluid" src="img/portfolio/5.jpg" /></div>
+						<div class="col-4 px-0"><img class="img-fluid" src="img/portfolio/6.jpg" /></div>
+					</div>
+				</div>
+			</section>
+
+			<section class="py-section bg-dark">
+				<div class="row">
+					<div class="row justify-content-center text-center text-light">
+						<div class="col-8">
+							<h2 class="text-light">Free Download at Start Bootstrap!</h2>
+						</div>
+						<div class="col-8">
+							<button class="btn btn-light rounded-pill py-3 px-4 mt-4 fw-bold text-uppercase text-dark">Download now!</button>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="py-section">
+				<form class="container text-dark text-center">
+					<div class="row justify-content-center">
+						<div class="col-5">
+							<h2 class="fw-semibold">Let's Get In Touch!</h2>
+						</div>
+					</div>
+
+					<div class="row justify-content-center">
+						<div class="col-12 col-lg-6">
+							<hr class="divider opacity-100 text-custom-primary mx-auto" />
+						</div>
+					</div>
+
+					<div class="row justify-content-center">
+						<div class="col-12 col-lg-6">
+							<p class="font-2 fs-6 text-dark text-opacity-75">Ready to start your next project with us? Send us a messages and we will get back to you as soon as possible!</p>
+						</div>
+					</div>
+
+					<div class="row justify-content-center my-3 font-2">
+						<div class="col-12 col-lg-6">
+							<div class="form-floating">
+								<input type="text" class="form-control" id="fullName" placeholder="Full name" />
+								<label for="fullName">Full name</label>
+							</div>
+						</div>
+					</div>
+
+					<div class="row justify-content-center my-3 font-2">
+						<div class="col-12 col-lg-6">
+							<div class="form-floating">
+								<input type="text" class="form-control" id="phone" placeholder="Phone number" />
+								<label for="fullName">Phone number</label>
+							</div>
+						</div>
+					</div>
+
+					<div class="row justify-content-center my-3 font-2">
+						<div class="col-12 col-lg-6">
+							<div class="form-floating">
+								<input type="text" class="form-control" id="email" placeholder="Email address" />
+								<label for="fullName">Email address</label>
+							</div>
+						</div>
+					</div>
+
+					<div class="row justify-content-center my-3 font-2 d-flex">
+						<div class="col-12 col-lg-6">
+							<div class="form-floating">
+								<textarea type="text" class="form-control" id="msg" placeholder="Messages" style="height: 10rem"></textarea>
+								<label for="fullName">Messages</label>
+							</div>
+						</div>
+					</div>
+
+					<div class="row justify-content-center my-3">
+						<div class="col-12 col-lg-6">
+							<button class="btn btn-custom-primary rounded-pill w-100 py-3 mt-4 fw-bold text-uppercase text-light" disabled>Submit</button>
+						</div>
+					</div>
+
+					<div class="row justify-content-center mt-5 font-2">
+						<div class="col-12 col-lg-6">
+							<i class="bi bi-phone fs-2 text-black-50"></i>
+							<p>+1 (555) 123-4567</p>
+						</div>
+					</div>
+				</form>
+			</section>
+		</main>
+		<footer>
+			<div class="container-fluid">
+				<div class="row bg-light py-5">
+					<div class="col">
+						<p class="text-center text-black-50 m-0">Copyright © 2022 - Company Name</p>
+					</div>
+				</div>
+			</div>
+		</footer>
+		<script src="../js/bootstrap.js"></script>
+	</body>
 </html>
