--- a/maquette_3/index.html
+++ b/maquette_3/index.html
@@ -138,13 +138,15 @@
 			</section>
 
 			<section class="py-section bg-dark">
-				<div class="row">
-					<div class="row justify-content-center text-center text-light">
-						<div class="col-8">
-							<h2 class="text-light">Free Download at Start Bootstrap!</h2>
-						</div>
-						<div class="col-8">
-							<button class="btn btn-light rounded-pill py-3 px-4 mt-4 fw-bold text-uppercase text-dark">Download now!</button>
+				<div class="container-fluid">
+					<div class="row">
+						<div class="row justify-content-center text-center text-light">
+							<div class="col-8">
+								<h2 class="text-light">Free Download at Start Bootstrap!</h2>
+							</div>
+							<div class="col-8">
+								<button class="btn btn-light rounded-pill py-3 px-4 mt-4 fw-bold text-uppercase text-dark">Download now!</button>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -221,6 +223,7 @@
 				</form>
 			</section>
 		</main>
+
 		<footer>
 			<div class="container-fluid">
 				<div class="row bg-light py-5">
