--- a/maquette_3/index.html
+++ b/maquette_3/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
-		<link rel="stylesheet" href="/ressources/css/bootstrap.css" />
-		<link rel="stylesheet" href="/ressources/css/bootstrap-icons.css" />
+		<link rel="stylesheet" href="../ressources/css/bootstrap.css" />
+		<link rel="stylesheet" href="../ressources/css/bootstrap-icons.css" />
 		<link rel="stylesheet" href="css/styles.css" />
 		<title>Document</title>
 	</head>
@@ -139,14 +139,12 @@
 
 			<section class="py-section bg-dark">
 				<div class="container-fluid">
-					<div class="row">
-						<div class="row justify-content-center text-center text-light">
-							<div class="col-8">
-								<h2 class="text-light">Free Download at Start Bootstrap!</h2>
-							</div>
-							<div class="col-8">
-								<button class="btn btn-light rounded-pill py-3 px-4 mt-4 fw-bold text-uppercase text-dark">Download now!</button>
-							</div>
+					<div class="row justify-content-center text-center text-light">
+						<div class="col-8">
+							<h2 class="text-light">Free Download at Start Bootstrap!</h2>
+						</div>
+						<div class="col-8">
+							<button class="btn btn-light rounded-pill py-3 px-4 mt-4 fw-bold text-uppercase text-dark">Download now!</button>
 						</div>
 					</div>
 				</div>
