--- a/maquette_4/index.html
+++ b/maquette_4/index.html
@@ -5,25 +5,26 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito" />
-		<link rel="stylesheet" href="/ressources/css/bootstrap.css" />
+		<link rel="stylesheet" href="../ressources/css/bootstrap.css" />
 		<link rel="stylesheet" href="css/styles.css" />
 		<title>Document</title>
 	</head>
 	<body>
-		<header class="p-4">
-			<div class="container">
-				<div class="row">
-					<div class="d-flex justify-content-between">
-						<div class="col">
-							<h1 class="fs-5 fw-bold">Start Bootstrap</h1>
-						</div>
-						<div class="col">
-							<div class="d-flex justify-content-end">
-								<a class="px-4 text-decoration-none text-dark" href=""> About </a>
-								<a class="px-4 text-decoration-none text-dark" href=""> Projects </a>
-								<a class="px-4 text-decoration-none text-dark" href=""> Contact </a>
-							</div>
-						</div>
+		<header>
+			<div class="navbar navbar-expand-lg fixed-top bg-light shadow py-3">
+				<div class="container">
+					<a class="navbar-brand fs-5 fw-bold">Start Bootstrap</a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
+						<span>Menu</span>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+
+					<div class="collapse navbar-collapse justify-content-lg-end" id="navbarMenu">
+						<ul class="navbar-nav">
+							<li class="nav-item"><a class="px-4 text-decoration-none text-dark" href=""> About </a></li>
+							<li class="nav-item"><a class="px-4 text-decoration-none text-dark" href=""> Projects </a></li>
+							<li class="nav-item"><a class="px-4 text-decoration-none text-dark" href=""> Contact </a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -31,20 +32,14 @@
 		<main>
 			<section class="bg-masthead">
 				<div class="container">
-					<div class="row p-5">
-						<div class="col d-flex justify-content-center">
-							<h2 class="display-1 ls-1 text-uppercase">Grayscale</h2>
-						</div>
+					<div class="row">
+						<h2 class="display-1 ls-1 text-uppercase">Grayscale</h2>
 					</div>
 					<div class="row">
-						<div class="col d-flex justify-content-center">
-							<p>A free, responsive, one page Bootstrap theme created by Start Bootstrap.</p>
-						</div>
+						<p>A free, responsive, one page Bootstrap theme created by Start Bootstrap.</p>
 					</div>
 					<div class="row">
-						<div class="col d-flex justify-content-center">
-							<button>Get Started</button>
-						</div>
+						<button>Get Started</button>
 					</div>
 				</div>
 			</section>
