--- a/maquette_3/index.html
+++ b/maquette_3/index.html
@@ -231,6 +231,6 @@
 				</div>
 			</div>
 		</footer>
-		<script src="../js/bootstrap.js"></script>
+		<script src="../ressources/js/bootstrap.js"></script>
 	</body>
 </html>
