--- a/maquette_4/index.html
+++ b/maquette_4/index.html
@@ -59,7 +59,7 @@
 
 			<section class="py-6">
 				<div class="container">
-					<div class="row g-5">
+					<div class="row g-5 justify-content-center">
 						<div class="col-6 col-sm-4 col-xl-3">
 							<div class="card h-100">
 								<img src="img/450x300.jpg" class="card-img-top" />
