--- a/maquette_5/index.html
+++ b/maquette_5/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../ressources/css/bootstrap-icons.css">
 		<link rel="stylesheet" href="../ressources/css/bootstrap.css" />
 		<link rel="stylesheet" href="css/styles.css" />
 		<title>Document</title>
@@ -42,33 +43,34 @@
 				</div>
 			</section>
 
-            <section class="py-section">
-                <div class="container text-center">
-                    <div class="row">
-                        <p class="text-warning text-uppercase fw-bold">Services</p>
-                    </div>
-                    <div class="row">
-                        <h2>What We Offer</h2>
-                    </div>
-                    <div class="row">
-                        <div class="col-3">
-                            <i class="bi bi-phone rounded-circle bg-white"></i>
-
-                        </div>
-                        <div class="col-3">
-                            <i class="bi bi-pencil rounded-circle bg-white"></i>
-
-                        </div>
-                        <div class="col-3">
-                            <i class="bi bi-hand-thumbs-up rounded-circle bg-white"></i>
-
-                        </div>
-                        <div class="col-3">
-
-                        </div>
-                    </div>
-                </div>
-            </section>
+			<section class="py-section bg-primary">
+				<div class="container text-center">
+					<div class="row">
+						<p class="text-warning text-uppercase fw-bold">Services</p>
+					</div>
+					<div class="row">
+						<h2>What We Offer</h2>
+					</div>
+					<div class="row pt-5 text-dark">
+						<div class="col-3">
+							<i class="bi bi-phone rounded-circle p-5 bg-white"></i>
+							<h3>Responsive</h3>
+						</div>
+						<div class="col-3">
+							<i class="bi bi-pencil rounded-circle p-5 bg-white"></i>
+							<h3>Redesigned</h3>
+						</div>
+						<div class="col-3">
+							<i class="bi bi-hand-thumbs-up rounded-circle p-5 bg-white"></i>
+							<h3>Favorited</h3>
+						</div>
+						<div class="col-3">
+							<i class="bi bi-hand-thumbs-up rounded-circle p-5 bg-white"></i>
+							<h3>Question</h3>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<script src="../ressources/js/bootstrap.bundle.min.js"></script>
 	</body>
