--- a/maquette_5/index.html
+++ b/maquette_5/index.html
@@ -51,22 +51,26 @@
 					<div class="row">
 						<h2>What We Offer</h2>
 					</div>
-					<div class="row pt-5 text-dark">
+					<div class="row pt-5 text-light">
 						<div class="col-3">
-							<i class="bi bi-phone rounded-circle p-5 bg-white"></i>
-							<h3>Responsive</h3>
+							<i class="bi bi-phone rounded-circle p-5 bg-white fs-4 text-primary"></i>
+							<h3 class="h5 mt-5">Responsive</h3>
+							<p class="test-muted">Looks great on any screen size!</p>
 						</div>
 						<div class="col-3">
-							<i class="bi bi-pencil rounded-circle p-5 bg-white"></i>
-							<h3>Redesigned</h3>
+							<i class="bi bi-pencil rounded-circle p-5 bg-white fs-4 text-primary"e"></i>
+							<h3 class="h5 mt-5">Redesigned</h3>
+							<p class="test-muted">Freshly redesigned for Bootstrap 5.</p>
 						</div>
 						<div class="col-3">
-							<i class="bi bi-hand-thumbs-up rounded-circle p-5 bg-white"></i>
-							<h3>Favorited</h3>
+							<i class="bi bi-hand-thumbs-up rounded-circle p-5 bg-white fs-4 text-primary""></i>
+							<h3 class="h5 mt-5">Favorited</h3>
+							<p class="test-muted">Millions of users <i class="bi bi-heart-fill"></i> Start Bootstrap!</p>
 						</div>
 						<div class="col-3">
-							<i class="bi bi-hand-thumbs-up rounded-circle p-5 bg-white"></i>
-							<h3>Question</h3>
+							<i class="bi bi-hand-thumbs-up rounded-circle p-5 bg-white fs-4 text-primary""></i>
+							<h3 class="h5 mt-5">Question</h3>
+							<p class="test-muted">I mustache you a question...</p>
 						</div>
 					</div>
 				</div>
